almost finalized state properties analysis

--- a/Report/sections/fermi-hubbard.tex
+++ b/Report/sections/fermi-hubbard.tex
@@ -187,7 +187,9 @@ The first line holds because the $L$-th site must be empty, thus leaving unchang
 			\hat c_{L+1} \equiv - \hat c_1
 		\right)
 	\]
-	The APBC-$\mathrm{XXZ}$ model is mapped onto a spinless fermion system with even number of fermions.
+	The APBC-$\mathrm{XXZ}$ model is mapped onto a spinless fermion system with even\footnote{
+		This is a matter of exact mappings. However it is intuitively clear that for large enough chains, a single inverted bond has null impact on the general phase structure of the model -- just as borders normally to for OBC systems. In thermodynamic limit, one expects the fermion parity to be irrelevant in terms of models mapping coherence.
+	} number of fermions.
 \end{itemize}
 For the sake of simplicity, I will limit this project to the first situation with an odd number of fermions. Since the PBC-$\mathrm{XXZ}$ admits for an exact Bethe-Ansatz solution, we can link the phase transitions of the two models.
 Apart from a constant energy shift, the hamiltonian \eqref{eq:xxz-hamiltonian-intermediate} is \textit{de-facto} identical to the spinless model of Eq.~\eqref{eq:spinless-hamiltonian-pbc} via the mapping
