--- a/Report/sections/theory.tex
+++ b/Report/sections/theory.tex
@@ -574,4 +574,4 @@ It can be shown that using the previous result gives:
 		\frac{\alpha}{x}
 	\right)^{1/2K}
 \end{equation}
-The most important detail to notice with respect to the $\mathrm{CDW}$ correlator of Eq.~\eqref{eq:density-density-correlation-power-law} is the inverted power-law dependence. \todo
+The most important detail to notice with respect to the $\mathrm{CDW}$ correlator of Eq.~\eqref{eq:density-density-correlation-power-law} is the inverted power-law dependence.
