--- a/Report/misc/definitions.tex
+++ b/Report/misc/definitions.tex
@@ -47,7 +47,7 @@
     invoke,dlopen,dlsym,system,error,throw,assert,new,Inf,Nan,pi,im,begin,while,for,in,return,
     break,continue,macro,quote,let,if,elseif,else,try,catch,end,bitstype,ccall,do,using,module,
     import,export,importall,baremodule,immutable,local,global,const,Bool,Int,Int8,Int16,Int32,
-    Int64,Uint,Uint8,Uint16,Uint32,Uint64,Float32,Float64,Complex64,Complex128,Any,Nothing,None,
+    Int64,Uint,Uint8,Uint16,Uint32,Uint64,Float32,Float64,Complex64,Complex128,Any,Nothing,None,MPO,MPS,
     function,type,typealias,abstract
   },
   sensitive=true,
